--- a/index.html
+++ b/index.html
@@ -4,27 +4,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
-    <title>Document</title>
+    <title>Main</title>
 </head>
 <body>
+<div class="container">
+    <div class="row">
+        <div class="col-12 crop">
+            <img src="images/purvine1.jpg" alt="">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4 crop cover">
+            <img src="images/purvine2.jpg" alt="">
+        </div>
+        <div class="col-4 crop cover">
+            <img src="images/purvine3.jpg" alt="">
+        </div>
+        <div class="col-4 crop cover">
+            <img src="images/purvine4.png" alt="">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <h1>Purvine Hall</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4 blue-box">
+            <p>the</p>  
+        </div>
+        <div class="col-8">
+            <p>the as well</p>
+        </div>
+    </div>
+    </div>
 
-<div class="wrapper">
-    <div class="col-12">
-        <img src="images/purvine1.jpg" alt="">
-    </div> 
+    <div class="scroll">
+        <div class="scroll-card crop">
+            <img src="images/ceet1.jpg" alt="CEET">
+            <p>CEET</p>
+        </div>
+        <div class="scroll-card crop">
+            <img src="images/cu1.jpg" alt="College Union building">
+            <p>College Union</p>
+        </div>
+        <div class="scroll-card crop">
+            <img src="images/dow1.jpg" alt="Martha Anne Dow building">
+            <p>Dow</p>
+        </div>
+        <div class="scroll-card crop">
+            <img src="images/snell1.jpg" alt="Snell">
+            <p>Snell Hall</p>
+        </div>
 </div>
-<div class=wrapper>
-    <div>
-        <img src="purvine2.jpg" alt="">
-    </div>
-    <div>
-        <img src="purvine3.jpg" alt="">
-    </div>
-    <div></div>
-</div>
-    
-    <div>The</div>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQlgfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 </body>
+
+
 </html>
