--- a/building_select.html
+++ b/building_select.html
@@ -9,19 +9,29 @@
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Main</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1 class="title">Link Page</h1>
-    <div>
-        <p>
-    <a href="building.html">Purvine Hall</a>
-        </p>
-        <p>
-    <a href="building_select.html">Building Selector</a>
-        </p>
-    </div>
+    <table class="container-fluid">
+        <tr class="row">
+            <td class="col-12">
+                <h1 class="title">Select a building!</h1>
+            </td>
+        </tr>
+        <tr class="row">
+            <td class="col-12">
+                <div id="campus_map">
+                    <!-- TODO: Replace with better map -->
+                    <img src="images/campus-map-1.jpg" alt="Campus Map"> 
+                    <a href="building.html" style="top: 48%; left: 28.5%; width: 6.5%; height: 12%;"></a>
+                </div>
+            </td>
+        </tr>
+    </table>
     
+
+
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
