Moving some stuff around, some new links that go nowhere

--- a/building_select.html
+++ b/building_select.html
@@ -22,8 +22,11 @@
             <td class="col-12">
                 <div id="campus_map">
                     <!-- TODO: Replace with better map -->
-                    <img src="images/campus-map-1.jpg" alt="Campus Map"> 
-                    <a href="building.html" style="top: 48%; left: 28.5%; width: 6.5%; height: 12%;"></a>
+                    <img src="images/campus-map-2.png" alt="Campus Map"> 
+                    <a href="buildings/purvine.html" style="top: 48%; left: 28.5%; width: 6.5%; height: 12%;"></a>
+                    <a href="buildings/cornett.html" style="top: 29.5%; left: 30.2%; width: 10.3%; height: 16%;"></a>
+                    <a href="buildings/lrc.html" style="top: 34.5%; left: 45%; width: 7%; height: 11%;"></a>
+                    <a href="buidlings/owens.html" style="top: 48.8%; left: 45%; width: 6.6%; height: 10.3%;"></a>
                 </div>
             </td>
         </tr>
