--- a/buildings/purvine.html
+++ b/buildings/purvine.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -16,13 +16,13 @@
 <table class="container-fluid">
     <tr class="row">
         <td class="col-12 crop" id="building-crop-1">
-            <img src="images/purvine1.jpg" alt="">
+            <img src="../images/purvine1.jpg" alt="">
         </td>
     </tr>
     <tr class="row">
-        <td class="col-4 crop"><img src="images/purvine2.jpg" alt=""></td>
-        <td class="col-4 crop"><img src="images/purvine3.jpg" alt=""></td>
-        <td class="col-4 crop"><img src="images/purvine4.png" alt=""></td>
+        <td class="col-4 crop"><img src="../images/purvine2.jpg" alt=""></td>
+        <td class="col-4 crop"><img src="../images/purvine3.jpg" alt=""></td>
+        <td class="col-4 crop"><img src="../images/purvine4.png" alt=""></td>
     </tr>
     <tr class="row">
         <td class="col-12">
