Starting majors page (major/set.html)

--- a/building_select.html
+++ b/building_select.html
@@ -54,11 +54,20 @@
             </div> -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-link" href="#">Home</li>
-                    <li class="nav-item active">
-                        <a class="nav-link active" href="#">Campus Map <span class="sr-only">(current)</span></a>
+                    <li class="nav-link">
+                        <a href="index.html" class="nav-link">
+                            Home
+                        </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
+                        <a class="nav-link active" href="#">
+                            Campus Map 
+                            <span class="sr-only">
+                                (current)
+                            </span>
+                        </a>
+                    </li>
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#">Link</a>
                     </li>
                     <li class="nav-item dropup">
@@ -72,7 +81,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#">Disabled</a>
-                    </li>
+                    </li> -->
                 </ul>
                 <!-- <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
