--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1 class="title">Link Page</h1>
     <div>
         <p>
-    <a href="building.html">Purvine Hall</a>
+    <a href="buildings/purvine.html">Purvine Hall</a>
         </p>
         <p>
     <a href="building_select.html">Building Selector</a>
