Changing up a bit of stuff, square images purvine

--- a/buildings/purvine.html
+++ b/buildings/purvine.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/building.css">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -16,13 +17,13 @@
 <table class="container-fluid">
     <tr class="row">
         <td class="col-12 crop" id="building-crop-1">
-            <img src="../images/purvine1.jpg" alt="">
+            <img src="../images/purvine1.jpg">
         </td>
     </tr>
     <tr class="row">
-        <td class="col-4 crop"><img src="../images/purvine2.jpg" alt=""></td>
-        <td class="col-4 crop"><img src="../images/purvine3.jpg" alt=""></td>
-        <td class="col-4 crop"><img src="../images/purvine4.png" alt=""></td>
+        <td class="col-4 crop"><img src="../images/purvine2.jpg"></td>
+        <td class="col-4 crop"><img src="../images/purvine3.jpg"></td>
+        <td class="col-4 crop"><img src="../images/purvine4.png"></td>
     </tr>
     <tr class="row">
         <td class="col-12">
@@ -35,38 +36,34 @@
             <h5>Built</h5>
             <p>0000</p>
             <h5>Primary Majors</h5>
-            <p>Software Engineering</p>
-            <p>Embedded Egineering</p>
-            <p>Electical Engineering</p>
+            <p>Software</p>
+            <p>Embedded</p>
+            <p>Electical</p>
         </td>
         <td class="col-8">
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error cupiditate minima voluptate tempore, aliquam
-                quis enim. Ut totam eligendi molestiae molestias ullam quae natus alias deleniti exercitationem, sit saepe.
-                Possimus!
-                Maiores voluptate distinctio quas. Dolor sequi odit similique quibusdam, amet laborum fugit tempore eos
-                numquam aliquam incidunt maiores facilis accusamus vero aperiam, laudantium animi veritatis vel eveniet
-                pariatur odio inventore!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, molestias praesentium! Minus eum, eaque laborum nemo quae eos velit aut at mollitia asperiores, sint unde dolorum doloribus repellendus modi dolores!
             </p>
         </td>
     </tr>
 </table>
 
+<!-- Images for this file are stored in ../css/building.scss -->
 <div class="scroll">
     <div class="scroll-card crop">
-        <img src="../images/ceet1.jpg" alt="CEET">
+        <div id="card-img-1"></div>
         <p>CEET</p>
     </div>
     <div class="scroll-card crop">
-        <img src="../images/cu1.jpg" alt="College Union building">
+        <div id="card-img-2"></div>
         <p>College Union</p>
     </div>
     <div class="scroll-card crop">
-        <img src="../images/dow1.jpg" alt="Martha Anne Dow building">
+        <div id="card-img-3"></div>
         <p>Dow</p>
     </div>
     <div class="scroll-card crop">
-        <img src="../images/snell1.jpg" alt="Snell">
+        <div id="card-img-4"></div>
         <p>Snell Hall</p>
     </div>
 </div>
