--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Main</title>
+    <title>Index</title>
 </head>
 <body>
     <h1 class="title">Link Page</h1>
     <div>
         <p>
-    <a href="buildings/purvine.html">Purvine Hall</a>
+            <a href="buildings/purvine.html">Purvine Hall</a>
         </p>
         <p>
-    <a href="building_select.html">Building Selector</a>
+            <a href="building_select.html">Building Selector</a>
         </p>
+        <p><a href="major/set.html">Software Engineering Technology</a></p>
     </div>
     
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
