--- a/buildings/purvine.html
+++ b/buildings/purvine.html
@@ -17,13 +17,13 @@
 <table class="container-fluid p-0">
     <tr class="row m-auto">
         <td class="col-12 crop" id="building-crop-1">
-            <img src="../images/purvine1.jpg">
+            <img class="cover" src="../images/purvine1.jpg">
         </td>
     </tr>
     <tr class="row m-auto">
         <td class="col-4 crop"><img src="../images/purvine2.jpg"></td>
         <td class="col-4 crop"><img src="../images/purvine3.jpg"></td>
-        <td class="col-4 crop"><img src="../images/purvine4.png"></td>
+        <td class="col-4 crop"><img src="../images/purvine4.jpg"></td>
     </tr>
     <tr class="row m-auto">
         <td class="col-4 blue-box">
