Fixed banner to use col-12

--- a/building_select.html
+++ b/building_select.html
@@ -16,6 +16,16 @@
 </head>
 <body>
     <table class="container-fluid">
+        <div id="page_banner">
+            <tr class="row">
+                <td class="col-8">
+                    <img src="https://www.oit.edu/themes/custom/oregontech/images/logo.png">
+                </td>
+                <td class="col-4">
+                    <img src="https://oregontechowls.com/images/main_logo.png">
+                </td>
+            </tr>
+        </div>
         <tr class="row">
             <td class="col-12">
                 <h1 class="page_title" style="text-align:center">Klamath Falls Campus Map</h1>
