Fluid Image on the banner

--- a/building_select.html
+++ b/building_select.html
@@ -19,10 +19,10 @@
         <div id="page_banner">
             <tr class="row">
                 <td class="col-8">
-                    <img src="https://www.oit.edu/themes/custom/oregontech/images/logo.png">
+                    <img class="img-fluid" src="https://www.oit.edu/themes/custom/oregontech/images/logo.png">
                 </td>
                 <td class="col-4">
-                    <img src="https://oregontechowls.com/images/main_logo.png">
+                    <img class="img-fluid" src="https://oregontechowls.com/images/main_logo.png">
                 </td>
             </tr>
         </div>
