problems with js not being loaded into html for firestore, not working atm

--- a/building_select.html
+++ b/building_select.html
@@ -112,7 +112,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-    <script type="module" src="js/building_select.js"></script>
+    <script type="text/JavaScript" src="js/building_select.js"></script>
 
 </body>
 </html>
