Starting on major page
Also added end of lines so that git stops complaining

--- a/buildings/purvine.html
+++ b/buildings/purvine.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/building.css">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/building.css">
     <!-- <link rel="manifest" href="manifest.json"> -->
     <meta name="mobile-web-app-capable" content="yes">
     <title>Purvine Hall</title>
@@ -16,14 +16,14 @@
 <body>
 <table class="container-fluid p-0">
     <tr class="row m-auto">
-        <td class="col-12 crop" id="building-crop-1">
-            <img class="cover" src="../images/purvine1.jpg">
+        <td class="col-12 cover main" id="building-crop-1">
+            <img src="../images/purvine1.jpg">
         </td>
     </tr>
     <tr class="row m-auto">
-        <td class="col-4 crop"><img src="../images/purvine2.jpg"></td>
-        <td class="col-4 crop"><img src="../images/purvine3.jpg"></td>
-        <td class="col-4 crop"><img src="../images/purvine4.jpg"></td>
+        <td class="col-4 cover"><img src="../images/purvine2.jpg"></td>
+        <td class="col-4 cover"><img src="../images/purvine3.jpg"></td>
+        <td class="col-4 cover"><img src="../images/purvine4.jpg"></td>
     </tr>
     <tr class="row m-auto">
         <td class="col-4 blue-box">
@@ -46,31 +46,31 @@
 
 <!-- Images for this file are stored in ../css/building.scss -->
 <div class="scroll">
-    <div class="scroll-card crop">
+    <div class="oit-card crop">
         <div id="card-img-1">
-            <div class="card-text">
+            <div class="oit-card-text">
                 <p>CEET</p>
             </div>
         </div>
     </div>
-    <div class="scroll-card crop">
+    <div class="oit-card crop">
         <div id="card-img-2">
-            <div class="card-text">
+            <div class="oit-card-text">
                 <p>College Union</p>
             </div>
         </div>
         
     </div>
-    <div class="scroll-card crop">
+    <div class="oit-card crop">
         <div id="card-img-3">
-            <div class="card-text">
+            <div class="oit-card-text">
                 <p>Dow Center</p>
             </div>
         </div>
     </div>
-    <div class="scroll-card crop">
+    <div class="oit-card crop">
         <div id="card-img-4">
-            <div class="card-text">
+            <div class="oit-card-text">
                 <p>Snell Hall</p>
             </div>
         </div>
@@ -87,6 +87,4 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQlgfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
 </body>
-
-
 </html>
