--- a/building_select.html
+++ b/building_select.html
@@ -10,7 +10,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/campus_map.css">
-    
+    <meta name="mobile-web-app-capable" content="yes">
     
     <title>Campus Map</title>
 </head>
