Major page is mostly done. Good enough for sprint.

--- a/home_page.html
+++ b/home_page.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/campus_map.css">
 
-
+    <meta name="mobile-web-app-capable" content="yes">
     <title>OIT Info Home</title>
 </head>
 <body>
