--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <a href="building_select.html">Building Selector</a>
         </p>
         <p><a href="major/set.html">Software Engineering Technology</a></p>
+        <p><a href="aaaaaaaaaaaaaaaaaa.html">404</a></p>
     </div>
 
     <script src="jquery/jquery-3.6.0.min.js"></script>
