Added space to bottom for nav bar
Made it so the nav bar does not obstruct the bottom content of the page.

--- a/building_select.html
+++ b/building_select.html
@@ -37,11 +37,16 @@
                 <h2 class="info_statement" style="text-align:center">Click a building to learn more.</h2>
             </td>
         </tr>
-        <tr class="row">
+        <tr class="row page_bottom">
             <td class="col-12">
                 <div id="campus_map">
                     <!-- TODO: Replace with better map -->
                     <img src="images/campus-map-2.png" alt="Campus Map" class="center">
+                    <!-- TODO: Use the Map and Area tags to get more accurate clickable links
+                                Learn how coords work -->
+                    <!--<map name="buildings">
+                        <area shape="rect" coords="100,150,200,201" href="buildings/purvine.html"/>
+                    </map> -->
                     <a href="buildings/purvine.html" style="top: 49.5%; left: 31.75%; width: 5.25%; height: 11%;"></a>
                     <a href="buildings/cornett.html" style="top: 33.75%; left: 31.75%; width: 10.3%; height: 14.5%;"></a>
                     <a href="buildings/lrc.html" style="top: 38%; left: 45%; width: 7%; height: 10%;"></a>
