--- a/home_page.html
+++ b/home_page.html
@@ -75,7 +75,7 @@
                 <h1>Get to know the staff</h1>
             </td>
         </tr>
-        <tr class="row" id="professor_directory">
+        <tr class="row page_bottom" id="professor_directory">
             <td class="col-12">
                 <p>click <a href="/professors_page.html">here</a> to view directory</p>
             </td>
@@ -96,12 +96,12 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-link">
-                    <a href="index.html" class="nav-link">
+                    <a href="home_page.html" class="nav-link">
                         Home
                     </a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link active" href="#">
+                    <a class="nav-link active" href="building_select.html">
                         Campus Map
                         <span class="sr-only">
                             (current)
