--- a/buildings/purvine.html
+++ b/buildings/purvine.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/building.css">
     <!-- <link rel="manifest" href="manifest.json"> -->
@@ -76,8 +76,8 @@
     </div>
 </div>
 
-<script src="../jquery/jquery-3.6.0.min.js"></script>
-<script src="../popper/popper.min.js"></script>
-<script src="../bootstrap/js/bootstrap.js"></script>
+<script src="../node_modules/jquery/dist/jquery.min.js"></script>
+<script src="../node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
+<script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
