Bootstrap stuff is working now

--- a/building_select.html
+++ b/building_select.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
 
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/campus_map.css">
@@ -60,7 +60,7 @@
             <img src="https://www.oit.edu/themes/custom/oregontech/images/logo.png" alt="oit logo">
         </a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -77,7 +77,7 @@
                 <li class="nav-item active">
                     <a class="nav-link active" href="#">
                         Campus Map
-                        <span class="sr-only">
+                        <span class="visually-hidden">
                             (current)
                         </span>
                     </a>
@@ -108,13 +108,13 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 
-<!-- <script src="node_modules/jquery/dist/jquery.min.js"></script>
-<script src="node_modules/@popperjs/core/dist/umd/popper.min.js"></script> -->
-<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="node_modules/jquery/dist/jquery.min.js"></script>
+<script src="node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
+<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
-    
+    <!-- <script src="includes.js" type="module"></script> -->
 
-    <!-- <script type="text/JavaScript" src="js/building_select.js"></script> -->
+    <script type="text/JavaScript" src="js/building_select.js"></script>
 
 </body>
 </html>
