--- a/home_page.html
+++ b/home_page.html
@@ -85,7 +85,7 @@
             <img src="https://www.oit.edu/themes/custom/oregontech/images/logo.png" alt="oit logo">
         </a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        <button class="navbar-toggler" type="button" data-sr-toggle="collapse" data-sr-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -102,7 +102,7 @@
                 <li class="nav-item active">
                     <a class="nav-link active" href="building_select.html">
                         Campus Map
-                        <span class="sr-only">
+                        <span class="visually-hidden">
                             (current)
                         </span>
                     </a>
