--- a/building_select.html
+++ b/building_select.html
@@ -107,14 +107,12 @@
 
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+<!-- <script src="node_modeules/@firebase/app/dist/app/"></script> -->
 
-<script src="node_modules/jquery/dist/jquery.min.js"></script>
-<script src="node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- <script src="build/firestore_import.js"></script> -->
+    <script src="build/bootstrap_import.js"></script>
 
-    <!-- <script src="includes.js" type="module"></script> -->
-
-    <script type="text/JavaScript" src="js/building_select.js"></script>
+    <script type="text/JavaScript" src="./js/building_select.js"></script>
 
 </body>
 </html>
