--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
         <p><a href="aaaaaaaaaaaaaaaaaa.html">404</a></p>
     </div>
 
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="build/bootstrap_import.js"></script>
 </body>
 
 </html>
