--- a/major_select.html
+++ b/major_select.html
@@ -48,10 +48,7 @@
     </div>
     
 
-<script src="node_modules/jquery/dist/jquery.min.js"></script>
-<script src="node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
+<script src="build/bootstrap_import.js"></script>
 <script src="js/major_select.js"></script>
 </body>
 </html>
