--- a/buildings/purvine.html
+++ b/buildings/purvine.html
@@ -76,8 +76,6 @@
     </div>
 </div>
 
-<script src="../node_modules/jquery/dist/jquery.min.js"></script>
-<script src="../node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-<script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../build/bootstrap_import.js"></script>
 </body>
 </html>
