Forgot to put in some stuff

--- a/home_page.html
+++ b/home_page.html
@@ -130,8 +130,6 @@
         </div>
     </nav>
 
-<script src="node_modules/jquery/dist/jquery.min.js"></script>
-<script src="node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="build/bootstrap_import.js"></script>
 </body>
 </html>
