--- a/major/set.html
+++ b/major/set.html
@@ -65,9 +65,7 @@
         </tr>
     </table>
 
-    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="../node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../build/bootstrap_import.js"></script>
 
     <script src="../js/major.js"></script>
 </body>
