Well, it looks like it's all done. Firestore works with bundling

--- a/building_select.html
+++ b/building_select.html
@@ -105,14 +105,8 @@
         </div>
     </nav>
 
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-<!-- <script src="node_modeules/@firebase/app/dist/app/"></script> -->
+    <script type="module" src="build/bootstrap.bundle.js"></script>
 
-    <!-- <script src="build/firestore_import.js"></script> -->
-    <script src="build/bootstrap_import.js"></script>
-
-    <script type="text/JavaScript" src="./js/building_select.js"></script>
-
+    <script type="module" src="js/building_select.js"></script>
 </body>
 </html>
