--- a/buildings/purvine.html
+++ b/buildings/purvine.html
@@ -76,6 +76,6 @@
     </div>
 </div>
 
-<script src="../build/bootstrap_import.js"></script>
+<script src="../build/bootstrap.bundle.js"></script>
 </body>
 </html>
