--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p><a href="aaaaaaaaaaaaaaaaaa.html">404</a></p>
     </div>
 
-<script src="build/bootstrap_import.js"></script>
+<script src="build/bootstrap.bundle.js"></script>
 </body>
 
 </html>
