--- a/major/set.html
+++ b/major/set.html
@@ -65,8 +65,8 @@
         </tr>
     </table>
 
-<script src="../build/bootstrap_import.js"></script>
+<script src="../build/bootstrap.bundle.js"></script>
 
-    <script src="../js/major.js"></script>
+<script src="../js/major.js"></script>
 </body>
 </html>
