--- a/major_select.html
+++ b/major_select.html
@@ -48,7 +48,7 @@
     </div>
     
 
-<script src="build/bootstrap_import.js"></script>
+<script src="build/bootstrap.bundle.js"></script>
 <script src="js/major_select.js"></script>
 </body>
 </html>
