--- a/home_page.html
+++ b/home_page.html
@@ -130,6 +130,6 @@
         </div>
     </nav>
 
-<script src="build/bootstrap_import.js"></script>
+<script src="build/bootstrap.bundle.js"></script>
 </body>
 </html>
